[mod] simple theme: dark mode: various fixes

--- a/searx/static/themes/simple/src/less/definitions.less
+++ b/searx/static/themes/simple/src/less/definitions.less
@@ -78,7 +78,7 @@
   --color-result-detail-font: #fff;
   --color-result-detail-label-font: lightgray;
   --color-result-detail-background: #000;
-  --color-result-detail-hr: #333;
+  --color-result-detail-hr: #555;
   --color-result-detail-link: #8af;
   --color-result-detail-loader-border: rgba(255, 255, 255, 0.2);
   --color-result-detail-loader-borderleft: rgba(0, 0, 0, 0);
@@ -92,6 +92,7 @@
   --color-toolkit-tabs-label-border: #fff;
   --color-toolkit-tabs-section-border: #ddd;
   --color-toolkit-select-border: #ddd;
+  --color-toolkit-select-border-hover: #bbb;
   --color-toolkit-checkbox-onoff-background: #ddd;
   --color-toolkit-checkbox-onoff-label-shadow: rgba(0, 0, 0, 0.3);
   --color-toolkit-checkbox-onoff-label-background: #3050ff;
@@ -122,10 +123,10 @@
     --color-footer-background: #181818;
     --color-footer-border: #333;
     /// Sidebar Colors
-    --color-sidebar-border: #333;
+    --color-sidebar-border: #555;
     --color-sidebar-font: #fff;
     /// BackToTop Colors
-    --color-backtotop-font: #58f;
+    --color-backtotop-font: #bbb;
     --color-backtotop-border: #333;
     --color-backtotop-background: #181818;
     --color-backtotop-shadow: #333;
@@ -133,7 +134,7 @@
     --color-btn-background: #58f;
     --color-btn-font: #222;
     /// Search Input Colors
-    --color-search-border: #444;
+    --color-search-border: #555;
     --color-search-background: #222;
     --color-search-font: #fff;
     --color-search-background-hover: #58f;
@@ -149,7 +150,7 @@
     --color-categories-item-border-selected: #58f;
     /// Autocomplete Colors
     --color-autocomplete-font: #fff;
-    --color-autocomplete-border: #444;
+    --color-autocomplete-border: #555;
     --color-autocomplete-background: #222;
     --color-autocomplete-background-hover: #181818;
     /// Answer Colors
@@ -168,13 +169,13 @@
     --color-result-link-visited-font: #96b;
     --color-result-publishdate-font: #777;
     --color-result-engines-font: #777;
-    --color-result-search-url-border: #333;
+    --color-result-search-url-border: #555;
     --color-result-search-url-font: #fff;
     /// Detail modal : same as the light version
     --color-result-detail-font: #fff;
     --color-result-detail-label-font: lightgray;
     --color-result-detail-background: #000;
-    --color-result-detail-hr: #333;
+    --color-result-detail-hr: #555;
     --color-result-detail-link: #8af;
     --color-result-detail-loader-border: rgba(255, 255, 255, 0.2);
     --color-result-detail-loader-borderleft: rgba(0, 0, 0, 0);
@@ -183,7 +184,7 @@
     --color-result-image-span-font: #fff;
     --color-result-image-background: #8af;
     /// Settings Colors
-    --color-settings-tr-hover: #333;
+    --color-settings-tr-hover: #2d2d2d;
     --color-settings-engine-description-font: darken(#dcdcdc, 30%);
     /// Toolkit Colors
     --color-toolkit-badge-font: #fff;
@@ -193,9 +194,10 @@
     --color-toolkit-dialog-border: #333;
     --color-toolkit-dialog-background: #222;
     --color-toolkit-tabs-label-border: #222;
-    --color-toolkit-tabs-section-border: #333;
-    --color-toolkit-select-border: #333;
-    --color-toolkit-checkbox-onoff-background: #ddd;
+    --color-toolkit-tabs-section-border: #555;
+    --color-toolkit-select-border: #555;
+    --color-toolkit-select-border-hover: #777;
+    --color-toolkit-checkbox-onoff-background: #3c3b31;
     --color-toolkit-checkbox-onoff-label-shadow: rgba(0, 0, 0, 0.3);
     --color-toolkit-checkbox-onoff-label-background: #58f;
     --color-toolkit-checkbox-onoff-checked-background: #ddd;
