--- a/searx/static/themes/simple/src/less/detail.less
+++ b/searx/static/themes/simple/src/less/detail.less
@@ -18,6 +18,7 @@ article.result-images .detail {
   left: 60rem;
   right: 0;
   top: @search-height;
+  transition: top 0.064s ease-in 0s;
   bottom: 0;
   background: var(--color-result-detail-background);
   border: 1px solid var(--color-result-detail-background);
