--- a/searx/static/themes/simple/src/less/toolkit.less
+++ b/searx/static/themes/simple/src/less/toolkit.less
@@ -89,7 +89,7 @@ td {
 
 tr {
   &:hover {
-    background: var(--color-settings-tr-hover);
+    background: var(--color-settings-tr-hover) !important;
   }
 }
 
@@ -336,7 +336,7 @@ select {
 
     &:hover,
     &:focus {
-      border-bottom: 1px solid var(--color-search-border);
+      border-bottom: 1px solid var(--color-toolkit-select-border-hover);
     }
 
     option {
